--- a/5 попытка/Base.lproj/Main.storyboard
+++ b/5 попытка/Base.lproj/Main.storyboard
@@ -169,20 +169,20 @@
                                             <action selector="saveActoin:" destination="w5G-cC-Flw" eventType="touchUpInside" id="3xT-A6-qof"/>
                                         </connections>
                                     </button>
-                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="x1R-0o-4af">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x1R-0o-4af">
                                         <rect key="frame" x="111" y="40" width="192" height="118"/>
                                         <subviews>
-                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="person.circle" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9y5-YR-jYC">
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Снимок экрана 2020-07-17 в 7.32.46 AM.png" translatesAutoresizingMaskIntoConstraints="NO" id="9y5-YR-jYC">
                                                 <rect key="frame" x="32" y="8.5" width="128" height="128"/>
                                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </imageView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="9y5-YR-jYC" firstAttribute="centerX" secondItem="x1R-0o-4af" secondAttribute="centerX" constant="11" id="6bC-tu-5a1"/>
+                                            <constraint firstItem="9y5-YR-jYC" firstAttribute="centerX" secondItem="x1R-0o-4af" secondAttribute="centerX" id="6bC-tu-5a1"/>
                                             <constraint firstAttribute="bottom" secondItem="9y5-YR-jYC" secondAttribute="bottom" constant="-19" id="Fm9-0g-uy8"/>
                                             <constraint firstItem="9y5-YR-jYC" firstAttribute="top" secondItem="x1R-0o-4af" secondAttribute="top" constant="8" id="Frw-bJ-5uA"/>
-                                            <constraint firstItem="9y5-YR-jYC" firstAttribute="leading" secondItem="x1R-0o-4af" secondAttribute="leading" constant="43" id="wSk-vb-s9R"/>
+                                            <constraint firstItem="9y5-YR-jYC" firstAttribute="leading" secondItem="x1R-0o-4af" secondAttribute="leading" constant="32" id="wSk-vb-s9R"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -191,14 +191,14 @@
                                 <constraints>
                                     <constraint firstItem="9LU-Y7-EJy" firstAttribute="top" secondItem="yTm-UN-FRb" secondAttribute="topMargin" id="0AF-IG-QUy"/>
                                     <constraint firstItem="xbP-BE-PQX" firstAttribute="leading" secondItem="9LU-Y7-EJy" secondAttribute="trailing" constant="8" id="1Uc-Ny-TEY"/>
-                                    <constraint firstAttribute="trailing" secondItem="x1R-0o-4af" secondAttribute="trailing" constant="117" id="3dt-Vn-4l6"/>
+                                    <constraint firstAttribute="trailing" secondItem="x1R-0o-4af" secondAttribute="trailing" constant="111" id="3dt-Vn-4l6"/>
                                     <constraint firstItem="5MK-d7-W29" firstAttribute="top" secondItem="gGj-iD-7IH" secondAttribute="bottom" constant="32" id="5zt-20-gaJ"/>
                                     <constraint firstItem="WmQ-3F-zLf" firstAttribute="top" secondItem="yTm-UN-FRb" secondAttribute="top" constant="198" id="A6s-Gc-0Dk"/>
                                     <constraint firstAttribute="trailing" secondItem="WmQ-3F-zLf" secondAttribute="trailing" constant="72" id="E3R-Cx-hbk"/>
                                     <constraint firstItem="WmQ-3F-zLf" firstAttribute="trailing" secondItem="jhx-gs-nKV" secondAttribute="trailing" constant="-16" id="Ge9-KT-fzs"/>
                                     <constraint firstItem="BUa-Z6-v29" firstAttribute="top" secondItem="c4s-q1-dvh" secondAttribute="bottom" constant="8" id="HFT-tp-aDq"/>
                                     <constraint firstItem="9LU-Y7-EJy" firstAttribute="centerX" secondItem="yTm-UN-FRb" secondAttribute="centerX" id="Jeo-rn-B4R"/>
-                                    <constraint firstItem="WmQ-3F-zLf" firstAttribute="top" secondItem="x1R-0o-4af" secondAttribute="bottom" constant="38" id="K30-T1-qcX"/>
+                                    <constraint firstItem="WmQ-3F-zLf" firstAttribute="top" secondItem="x1R-0o-4af" secondAttribute="bottom" constant="40" id="K30-T1-qcX"/>
                                     <constraint firstItem="gGj-iD-7IH" firstAttribute="leading" secondItem="5MK-d7-W29" secondAttribute="leading" id="KRe-8d-8H7"/>
                                     <constraint firstItem="gGj-iD-7IH" firstAttribute="top" secondItem="jhx-gs-nKV" secondAttribute="bottom" constant="66" id="PFN-Gq-VeA"/>
                                     <constraint firstItem="WmQ-3F-zLf" firstAttribute="leading" secondItem="jhx-gs-nKV" secondAttribute="leading" id="Q7R-GI-TkN"/>
@@ -212,8 +212,8 @@
                                     <constraint firstItem="5MK-d7-W29" firstAttribute="top" secondItem="aAs-GB-iX8" secondAttribute="bottom" constant="56" id="ae7-6s-c6a"/>
                                     <constraint firstItem="5MK-d7-W29" firstAttribute="trailing" secondItem="c4s-q1-dvh" secondAttribute="trailing" id="bYG-YV-ZUo"/>
                                     <constraint firstAttribute="trailing" secondItem="Nnn-oZ-Nis" secondAttribute="trailing" constant="78" id="c8a-Cf-VcU"/>
-                                    <constraint firstItem="x1R-0o-4af" firstAttribute="leading" secondItem="yTm-UN-FRb" secondAttribute="leading" constant="105" id="cW2-cN-m53"/>
-                                    <constraint firstItem="x1R-0o-4af" firstAttribute="top" secondItem="yTm-UN-FRb" secondAttribute="top" constant="42" id="gfK-Fq-UVK"/>
+                                    <constraint firstItem="x1R-0o-4af" firstAttribute="leading" secondItem="yTm-UN-FRb" secondAttribute="leading" constant="111" id="cW2-cN-m53"/>
+                                    <constraint firstItem="x1R-0o-4af" firstAttribute="top" secondItem="yTm-UN-FRb" secondAttribute="top" constant="40" id="gfK-Fq-UVK"/>
                                     <constraint firstItem="c4s-q1-dvh" firstAttribute="top" secondItem="pnR-IE-DJT" secondAttribute="bottom" constant="38" id="h7j-Kv-9y6"/>
                                     <constraint firstItem="WmQ-3F-zLf" firstAttribute="leading" secondItem="yTm-UN-FRb" secondAttribute="leading" constant="43" id="iaI-Bx-e3l"/>
                                     <constraint firstItem="BUa-Z6-v29" firstAttribute="top" secondItem="Nnn-oZ-Nis" secondAttribute="top" id="nLU-bA-0Yt"/>
@@ -436,5 +436,6 @@
     <resources>
         <image name="calendar" catalog="system" width="128" height="106"/>
         <image name="person.circle" catalog="system" width="128" height="121"/>
+        <image name="Снимок экрана 2020-07-17 в 7.32.46 AM.png" width="376" height="461"/>
     </resources>
 </document>
